[project]
name = "image-gen-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.3.16",
    "diffusers>=0.31.0",
    "protobuf>=5.29.2",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "torchao>=0.7.0",
    "transformers[torch]>=4.47.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.bentoml.build]
service = "service:Flux"
